--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
-fmc_domain: app.com
-fmc_domain_dashed: "{{ fmc_domain | replace('.', '-') }}"
+# User must define clojure_uberjar_webapp_domain
+clojure_uberjar_webapp_dashed: "{{ clojure_uberjar_webapp_domain | replace('.', '-') }}"
